--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registro e Inicio de Sesión</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Asegúrate de que la ruta sea correcta -->
     <script type="module">
         // Importa las funciones necesarias de Firebase
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
@@ -21,15 +25,11 @@
         const app = initializeApp(firebaseConfig);
         const auth = getAuth();
     </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro e Inicio de Sesión</title>
 </head>
-<body>
-
+<body id="auth"> <!-- Añadido id para aplicar estilos -->
     <!-- Formulario de inicio de sesión -->
     <h2>Iniciar Sesión</h2>
-    <form id="login-form">
+    <form id="login-form" class="glass"> <!-- Añadido clase para aplicar estilos -->
         <input type="email" id="email-login" placeholder="Correo electrónico" required>
         <input type="password" id="password-login" placeholder="Contraseña" required>
         <button type="submit">Iniciar Sesión</button>
@@ -37,7 +37,7 @@
 
     <!-- Formulario de registro -->
     <h2>Registrarse</h2>
-    <form id="register-form">
+    <form id="register-form" class="glass"> <!-- Añadido clase para aplicar estilos -->
         <input type="email" id="email-register" placeholder="Correo electrónico" required>
         <input type="password" id="password-register" placeholder="Contraseña" required>
         <button type="submit">Registrarse</button>
