--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
         <button id="take-photo">Escanear Código QR</button>
         <canvas id="canvas"></canvas>
         <div id="output">Esperando código QR...</div>
+    <!-- Contenedor para el mensaje de felicitación -->
+    <div id="congrats-message" style="display: none; background: rgba(255, 255, 255, 0.8); padding: 20px; border-radius: 10px; text-align: center;">
+        <h2>¡Felicidades!</h2>
+        <p id="message-content"></p>
+    </div>
     </div>
 
     <!-- Incluye la biblioteca jsQR -->
