--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
     <div id="app" class="glass">
         <h1>Bienvenido, <span id="user-name"></span></h1>
         <p>Marcador: <span id="score">0</span></p>
+         
+    <!-- Contenedor para el texto de felicitación -->
+    <p id="congrats-text" style="display: none; color: green; font-weight: bold;">¡Felicidades! Has juntado 5 puntos, ¡tienes un café gratis!</p>
+
         <video id="video" autoplay playsinline></video>
         <button id="take-photo">Escanear Código QR</button>
         <canvas id="canvas"></canvas>
