--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <p>Marcador: <span id="score">0</span></p>
          
     <!-- Contenedor para el texto de felicitación -->
-    <p id="congrats-text" style="display: none; color: green; font-weight: bold;">¡Felicidades! Has juntado 5 puntos, ¡tienes un café gratis!</p>
+    <p id="congrats-text" style="display: none; color: green; font-weight: bold;">¡Felicidades! ganaste un café gratis!</p>
 
         <video id="video" autoplay playsinline></video>
         <button id="take-photo">Escanear Código QR</button>
@@ -136,7 +136,8 @@
     <!-- Contenedor para el mensaje de felicitación -->
     <div id="congrats-message" style="display: none; background: rgba(255, 255, 255, 0.8); padding: 20px; border-radius: 10px; text-align: center;">
         <h2>¡Felicidades!</h2>
-        <p id="message-content"></p>
+    <p>Tienes un café gratis</p>
+    <p>Acércate con el cajero y muéstrale tu pantalla</p>
     </div>
     </div>
 
